syntax = "proto3";
package microshopping;
option go_package="./proto;microshopping";

service AdService{
    rpc GetAds(AdRequest)returns(AdResponse){}
}
message AdRequest{
    repeated string context_keys = 1;
}
message AdResponse{
   repeated Ad ads = 1;
}
//广告消息
message Ad{
    //重定向url
    string redirect_url = 1;
    //广告内容
    string text = 2;
}
